<resources>
    <string name="app_name">C195PA</string>
    <string name="action_settings">Settings</string>
    <string name="login_screen_text">Login</string>
    <string name="night_owl">Night Owl</string>
    <string name="title_activity_term_screen">TermScreen</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="title_activity_term_edit">TermEditActivity</string>
    <string name="start_date_text">Start Date:</string>
    <string name="end_date_text">End Date:</string>
    <string name="date_text">yyyy-MM-dd</string>
    <string name="title_activity_deleteme">deleteme</string>
    <string name="add_term">Add Term --></string>
    <string name="delete_term">Delete Term</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="term_name">Term Name</string>
    <string name="title_activity_add_course">AddCourseActivity</string>
    <string name="course_name">Course Name</string>
    <string name="course_status">Status</string>
    <string name="course_mentor">Course Mentor</string>
    <string name="mentor_phone">Mentor Phone</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="course_notes">Course Notes</string>
    <string name="name_hint">Name</string>
    <string name="date_hint">yyyy-MM-dd</string>
    <string name="course_status_hint">Course Status</string>
    <string name="mentor_name_hint">Mentor Name</string>
    <string name="phone_hint">(000)-000-0000</string>
    <string name="email_hint">something@you.com</string>
    <string name="add_assessment"><![CDATA[Add Assessment -->]]></string>
    <string name="add_edit_courses_for_term"><![CDATA[Add/Edit Courses for Term -->]]></string>
    <string name="title_activity_assessment">AssessmentActivity</string>
    <string name="delete">Delete</string>
    <string name="course_directions">Click on course to edit/Add or View Assessments associated with course</string>
    <string name="title">Title:</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="due">Due:</string>
    <string name="choose_type_of_assessment">Choose Type of Assessment:</string>
    <string name="view_assessments">View Assessments</string>
    <string name="share">Share</string>
</resources>
